<resources>
    <string name="app_name">巡检平台</string>
    <string name="home">首页</string>
    <string name="message">消息</string>
    <string name="hung">挂接</string>
    <string name="broken">拆除</string>
    <string name="return_back">归还</string>
    <string name="contacts">通讯录</string>
    <string name="mine">我的</string>
    <!-- 检测模块 -->
    <string name="detect_manager">检测管理</string>
    <string name="detect_infrared_title">检测管理红外测温任务</string>
    <string name="detect_line_name">线路名称</string>
    <string name="detect_process_state">处理状态</string>
    <string name="go_dispose">去处理</string>
    <string name="environment_temper">环境温度</string>
    <string name="normal_temper">正常温度</string>
    <string name="highest_temper">最高温度</string>
    <string name="big_tree_pole">大树杆</string>
    <string name="ground_done">已处理</string>
    <string name="ground_no_dispose">未处理</string>
    <string name="all">全部</string>
    <string name="sure">确定</string>
    <string name="back">返回</string>
    <string name="name">姓名</string>
    <string name="time">时间</string>
    <string name="pole_name">杆塔名称</string>
    <string name="parts_name">部件名称</string>
    <string name="select_pay">交跨点选择</string>
    <string name="select_parts_name">请选择部件名称</string>
    <string name="select_environment_temper">请输入环境温度</string>
    <string name="select_normal_temper">请输入正常温度</string>
    <string name="select_highest_temper">请输入最高温度</string>
    <string name="scene_describe">现场描述</string>
    <string name="input_scene_describe">请输入描述内容</string>
    <string name="scene_image">现场照片</string>
    <string name="all_visible">全景可见光</string>
    <string name="phase_a">相别A</string>
    <string name="phase_b">相别B</string>
    <string name="phase_c">相别C</string>
    <string name="lan_line">地线</string>
    <string name="splicing_sleeve">接续管</string>
    <string name="save">保存</string>
    <string name="edit">编辑</string>
    <string name="detect_pay_across_measure">检测管理交跨测量任务</string>
    <string name="pay_across_type">交跨类型</string>
    <string name="pay_across_department">所属部门</string>
    <string name="step_railway">铁路</string>
    <string name="step_road">道路</string>
    <string name="step_river">水系</string>
    <string name="step_important_channel">重要通道</string>
    <string name="pay_across_distance">交跨距离</string>
    <string name="is_qualified">是否合格</string>
    <string name="select_pay_dot">交跨点选择</string>
    <string name="select_pay_type">交跨类型选择</string>
    <string name="please_select_pay_type">请选择交跨类型</string>
    <string name="please_select_pay_dot">交跨点选择</string>
    <string name="pay_measure_distance">交跨距离</string>
    <string name="input_pay_measure_distance">请输入交跨距离</string>
    <string name="resistance_a">电阻值A</string>
    <string name="resistance_b">电阻值B</string>
    <string name="resistance_c">电阻值C</string>
    <string name="resistance_d">电阻值D</string>
    <string name="qualified">合格</string>
    <string name="not_qualified">不合格</string>
    <string name="pole_select">杆塔选择</string>
    <string name="pay_pole_select">交跨点选择</string>
    <string name="please_pay_pole_select">请选择交跨点</string>
    <string name="ground_resistance_a">接地电阻A</string>
    <string name="ground_resistance_b">接地电阻B</string>
    <string name="ground_resistance_c">接地电阻C</string>
    <string name="ground_resistance_d">接地电阻D</string>
    <string name="please_input_resistance_a">请输入电阻值A</string>
    <string name="please_input_resistance_b">请输入电阻值B</string>
    <string name="please_input_resistance_c">请输入电阻值C</string>
    <string name="please_input_resistance_d">请输入电阻值D</string>
    <string name="system_display">省检输电巡检平台</string>
    <string name="input_username">请输入用户名</string>
    <string name="input_password">请输入密码</string>
    <string name="remember_username">记住用户名</string>
    <string name="login">登录</string>
    <string name="search">搜索</string>

    <string name="net_error">请确认网络已连接正确</string>
    <string name="load_no_more_data">没有更多的数据了</string>
    <string name="load_top">已经到顶了</string>
    <!-- 检修模块 -->
    <string name="repair_task">检修任务</string>
    <string name="undo_task">未开始</string>
    <string name="doing_task">已开始</string>
    <string name="done_task">已est结束</string>
    <string name="repair_department">部门</string>
    <string name="repair_search_hint">请输入任务名称进行搜索</string>
    <string name="start_time">起始时间</string>
    <string name="end_time">结束时间</string>
    <string name="repair_type">检修分类</string>
    <string name="repair_belong_department">所属部门</string>
    <string name="send_time">下发时间</string>
    <string name="task_type">任务类型</string>
    <string name="repair_task_bill">任务台账</string>
    <string name="repair_task_check">现场查勘</string>
    <string name="repair_records">开收工录音</string>
    <string name="repair_ground_manage">接地线管理</string>
    <string name="repair_information">检修资料</string>
    <string name="repair_task_name">任务名称</string>
    <string name="repair_power_cut">是否停电</string>
    <string name="repair_power_cut_area">停电范围</string>
    <string name="repair_plan_start_time">计划开始时间</string>
    <string name="repair_plan_end_time">计划结束时间</string>
    <string name="repair_task_create">任务创建人</string>
    <string name="repair_task_create_time">创建时间</string>
    <string name="repair_task_class">派发班组</string>
    <string name="repair_construction_organization">施工单位</string>
    <string name="repair_task_person">工作负责人</string>
    <string name="repair_standard_task_information">标准化作业内容 </string>
    <string name="repair_new_check">新增现场查勘</string>
    <string name="task_log_add">新增工作日志</string>
    <string name="repair_ground_manage_add">新增接地线管理</string>
    <string name="repair_record_add">新增开收工录音</string>
    <string name="repair_information_add">新增检修资料</string>
    <string name="repair_tower_check">新增登杆检查</string>
    <string name="repair_fix_task">新增消缺工作</string>
    <string name="repair_instruction_clean">新增绝缘子清扫</string>
    <string name="repair_line_check">新增走线检查</string>
    <string name="repair_spray_add">新增RTV喷涂</string>
    <string name="repair_water_test">新增增水性实验</string>
    <string name="repair_standard_task">标准化作业内容</string>
    <string name="repair_fix_task_detail">消缺工作详情</string>

    <string name="tower_check_detail">登杆检查</string>
    <string name="repair_line_name">线路名称</string>
    <string name="repair_line_select">请选择线路</string>
    <string name="repair_select_tower">请选择杆塔</string>
    <string name="repair_select_phase">请选择相别</string>
    <string name="repair_select_equip">请选择设备名称</string>
    <string name="repair_equipment_name">设备名称</string>
    <string name="repair_equipment_name_input">请选择设备名称</string>
    <string name="repair_test_conclusion_input">请输入实验结论</string>
    <string name="repair_check_person">查勘人</string>
    <string name="repair_check_person_input">请输入查勘人</string>
    <string name="repair_record_name_input">请输入录音名称</string>
    <string name="repair_spot_pic">现场照片</string>
    <string name="repair_check_submit">提交</string>
    <string name="content_describe">内容描述</string>
    <string name="content_describe_input">请输入内容描述</string>
    <string name="repair_instruction_clean_before">清扫前照片</string>
    <string name="repair_instruction_clean_after">清扫后照片</string>
    <string name="repair_spray_before">喷涂前照片</string>
    <string name="repair_spray_one">第一道喷涂照片</string>
    <string name="repair_spray_two">第二道喷涂照片</string>
    <string name="repair_task_start">开工</string>
    <string name="repair_task_end">收工</string>
    <string name="repair_record_name">录音名称</string>
    <string name="repair_record_type">录音类型</string>
    <string name="repair_record_scene">现场录音</string>
    <string name="repair_tower_select">线路杆塔选择</string>

    <string name="task_manager">工程管理</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="task_log_place">地点</string>
    <string name="task_log_title">日志标题</string>
    <string name="tower_number">杆塔编号</string>
    <string name="information_number">检修资料编号</string>
    <string name="tower_creater">创建人</string>
    <string name="insulator_create">清扫人</string>
    <string name="tower_create_time">创建时间</string>
    <string name="power_level">电压等级</string>
    <string name="defect_describe">缺陷描述</string>
    <string name="task_number">任务编号</string>
    <string name="record_number">记录编号</string>
    <string name="defect_number">缺陷编号</string>
    <string name="phase">相别</string>
    <string name="insulator_locate">位置</string>
    <string name="repair_select_locate">请选择位置</string>
    <string name="task_check_perosn">勘察人</string>
    <string name="task_check_department">勘察单位名称</string>
    <string name="task_check_time">勘察时间</string>
    <string name="record_person">录音人</string>
    <string name="task_record_time">录音时间</string>
    <string name="start_tower">起点杆塔</string>
    <string name="test_conclusion">实验结论</string>
    <string name="record_name">录音名称</string>
    <!--<string name="repair_task_name"> </string>-->
    <!--<string name="repair_task_name"> </string>-->

</resources>
