<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.activity_repair.stand_detail.InsulatorDetailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_50">

        <TextView
            style="@style/item_text_style"
            android:text="@string/repair_line_name" />

        <TextView
            android:id="@+id/tv_line_select"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|end"
            android:layout_marginEnd="@dimen/space_10" />
    </RelativeLayout>

    <View
        android:background="@color/grey_dialog"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_1">
    </View>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_50">

        <TextView
            style="@style/item_text_style"
            android:text="@string/tower_number" />

        <TextView
            android:id="@+id/tv_tower_number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|end"
            android:layout_marginEnd="@dimen/space_10" />
    </RelativeLayout>

    <View
        android:background="@color/grey_dialog"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_1">
    </View>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_50">

        <TextView
            style="@style/item_text_style"
            android:text="@string/insulator_locate" />

        <TextView
            android:id="@+id/tv_insulator_locate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|end"
            android:layout_marginEnd="@dimen/space_10" />

    </RelativeLayout>

    <View
        android:background="@color/grey_dialog"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_1">
    </View>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_50">

        <TextView
            style="@style/item_text_style"
            android:text="@string/insulator_create" />

        <TextView
            android:id="@+id/tv_insulator_create"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|end"
            android:layout_marginEnd="@dimen/space_10" />
    </RelativeLayout>

    <View
        android:background="@color/grey_dialog"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_1">

    </View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_repair_content_title"
            style="@style/item_text_style"
            android:text="@string/record_number" />

        <TextView
            android:id="@+id/tv_record_number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|end"
            android:layout_marginEnd="@dimen/space_10" />


    </LinearLayout>

    <View
        android:background="@color/grey_dialog"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_1">

    </View>

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/item_repair_pic">
    </include>

    <ImageView
        android:id="@+id/iv_image"
        android:layout_marginTop="@dimen/space_10"
        android:layout_marginStart="@dimen/space_10"
        android:layout_width="@dimen/space_60"
        android:layout_height="@dimen/space_60" />
</LinearLayout>